--- a/VidCoder/Resources/Translations/EncodingRes.hr.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.hr.resx
@@ -737,7 +737,13 @@ Odbacuje sva ostala podešavanja.</value>
   <data name="DeblockToolTip" xml:space="preserve">
     <value>Deblock uklanja smetnje nalik blokovima koje su uzrokovane lošom kvalitetom video kompresije.</value>
   </data>
-  
+  <data name="DeinterlaceToolTip" xml:space="preserve">
+    <value>Deinterlace uklanja smetnje nalik češlju sa slike.
+
+Bwdif i Yadif su  dva popularana i brza deinterlacera.
+
+Decomb se prebacuje između više algoritama interpolacije za brzinu i kvalitetu.</value>
+  </data>
   <data name="DenoiseToolTip" xml:space="preserve">
     <value>Denoise smanjuje ili uklanja pojavu šuma ili zrnatosti. To može poboljšati učinkovitost kompresije i stvoriti kvalitetniji videozapis sa manjim veličinama datoteka. 
 Pretjerano jake postavke Denoise mogu oštetiti kvalitetu slike uklanjanjem detalja.
@@ -849,5 +855,7 @@ Lapsharp izoštrava pomoću konvolucijskih zrna koja približavaju laplacijskim 
   <data name="MinimumCroppingToolTip" xml:space="preserve">
     <value>Ako je automatsko obrezivanje ispod tog iznosa za stranu, onemogućite obrezivanje za tu stranu. Korisno za sprečavanje ponovnog uzorkovanja kod malog obrezivanja.</value>
   </data>
-  
+  <data name="CroppingType_Conservative" xml:space="preserve">
+    <value>Konzervativno</value>
+  </data>
 </root>
