--- a/VidCoder/Resources/Translations/EncodingRes.nl.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.nl.resx
@@ -738,7 +738,13 @@ Negeert alle andere instellingen.</value>
   <data name="DeblockToolTip" xml:space="preserve">
     <value>Deblock vermindert hoekige artefacten, veroorzaakt door videocompressie met lage kwaliteit.</value>
   </data>
-  
+  <data name="DeinterlaceToolTip" xml:space="preserve">
+    <value>Deinterlace verwijdert 'kam' artefacten uit het beeld.
+
+Bwdif en Yadif zijn twee populaire, snelle deïnterlacers.
+
+Decomb wisselt tussen verschillende interpolatiealgoritmen voor snelheid en kwaliteit.</value>
+  </data>
   <data name="DenoiseToolTip" xml:space="preserve">
     <value>Denoise vermindert of verwijdert ruis en korreligheid. Dit kan de efficiëntie van de compressie verbeteren en video van hogere kwaliteit opleveren met een kleinere bestandsgrootte.
 Een al te sterke Denoise-instelling kan de beeldkwaliteit verminderen door detail te verwijderen.
@@ -849,5 +855,7 @@ Lapsharp verscherpt middels plooikernen die Laplaciaanse randfilters benaderen e
   <data name="MinimumCroppingToolTip" xml:space="preserve">
     <value>Als het automatisch bijsnijden voor een zijde onder deze waarde ligt, schakel dan het bijsnijden voor die zijde uit. Handig om resampling op kleine bijsnijdhoeveelheden te voorkomen </value>
   </data>
-  
+  <data name="CroppingType_Conservative" xml:space="preserve">
+    <value>Conservatief</value>
+  </data>
 </root>
