--- a/VidCoder/Resources/Translations/LogRes.nl.resx
+++ b/VidCoder/Resources/Translations/LogRes.nl.resx
@@ -133,6 +133,6 @@
     <value>Uitgebreid</value>
   </data>
   <data name="ClearFinishedButton" xml:space="preserve">
-    <value>Wissen voltooid</value>
+    <value>Voltooid wissen</value>
   </data>
 </root>
