--- a/VidCoder/Resources/Translations/CommonRes.hr.resx
+++ b/VidCoder/Resources/Translations/CommonRes.hr.resx
@@ -341,5 +341,7 @@ Kompletna kopija GNU Opće javne licence dolazi s ovim programom.</value>
     <value>MB</value>
     <comment>Abbreviation for megabytes</comment>
   </data>
-  
+  <data name="Enabled" xml:space="preserve">
+    <value>Omogućeno</value>
+  </data>
 </root>
