--- a/VidCoder/Resources/Translations/MainRes.zh-Hant.resx
+++ b/VidCoder/Resources/Translations/MainRes.zh-Hant.resx
@@ -747,6 +747,12 @@ v5 為在 Windows 7/8 上測試過的最新版本。
   <data name="CopyLogAndReportMenuItem" xml:space="preserve">
     <value>複製記錄檔並回報問題</value>
   </data>
-  
-  
+  <data name="WatcherMenuItem" xml:space="preserve">
+    <value>監看</value>
+  </data>
+  <data name="QueueProgressLabel" xml:space="preserve">
+    <value>佇列 {0}/{1}:</value>
+    <comment>{0} is the current job number for scanning and adding an item to the queue
+{1} is the total number of scanned items this session</comment>
+  </data>
 </root>
