--- a/VidCoder/Resources/Translations/OptionsRes.ja.resx
+++ b/VidCoder/Resources/Translations/OptionsRes.ja.resx
@@ -189,7 +189,9 @@
   <data name="BetaUpdatesNonBeta" xml:space="preserve">
     <value>最新のベータバージョンを使う</value>
   </data>
-  
+  <data name="UpdateReadyStatus" xml:space="preserve">
+    <value>アップデート{0}が利用可能です。</value>
+  </data>
   <data name="UpToDateStatus" xml:space="preserve">
     <value>最新の状態です</value>
   </data>
@@ -370,7 +372,14 @@
   <data name="EncodeRetriesLabel" xml:space="preserve">
     <value>エンコード再試行回数:</value>
   </data>
-  
-  
-  
+  <data name="ApplyUpdateButton" xml:space="preserve">
+    <value>アップデートを適用する</value>
+  </data>
+  <data name="CheckingForUpdateStatus" xml:space="preserve">
+    <value>アップデートを確認しています…</value>
+  </data>
+  <data name="UpdateModeLabel" xml:space="preserve">
+    <value>アップデート方法:</value>
+    <comment>Label for a dropdown to control whether app updates are applied immediately or delayed until next program launch.</comment>
+  </data>
 </root>
